<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">厚朴通讯录</string>
    <string name="login">欢迎使用厚朴通讯录——请登陆</string>
    <string name="name">名字</string>
    <string name="psw">密码</string>
    <string name="login_confirm">登陆</string>
    <string name="action_settings">Settings</string>
    <string name="choice_query">查询</string>
    <string name="choice_add">增加</string>
    <string name="choice_download">下载</string>
    <string name="add_button_confirm">确定</string>
    <string name="add_button_cancel">返回</string>
    <string name="add_tv_name">名字</string>
	<string name="add_tv_major">专业</string>
	<string name="add_tv_sex">性别</string>
	<string name="add_tv_phone">电话</string>
	<string name="add_tv_email">邮箱</string>
	<string name="add_tv_qq">QQ</string>
	<string name="add_tv_bank">银行</string>
	<string name="add_tv_id">ID</string>
	<string name="add_tv_place">家乡</string>
	<string name="find">查找</string>
	<string name="back">返回</string>
	<string name="exit">退出</string>
	<string name="n">名字</string>
	<string name="reset">重置数据</string>
	<string name="about">关于</string>
	<string name="welcome">欢迎您</string>
	<string name="about1">此APP由韦德过为厚朴工作室开发</string>
    <string name="about2">TEL:15521139313</string>
    <string name="about3">E-MAIL:326114945@qq.com</string>
    <string name="ex">扩展</string>
    
</resources>
