<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.test2.MainActivity" >

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.33" >

        <LinearLayout
            android:layout_width="306dp"
            android:layout_height="522dp"
            android:orientation="vertical" >

			<LinearLayout
			    android:layout_width="283dp"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >

		    	<TextView
                	android:id="@+id/textView1"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="@string/add_tv_name" />

		   		<EditText
		   		    android:id="@+id/editText1"
		   		    android:layout_width="255dp"
		   		    android:layout_height="wrap_content"
		   		    android:ems="10" />

			</LinearLayout>

         	<LinearLayout
         	    android:layout_width="284dp"
         	    android:layout_height="wrap_content"
         	    android:orientation="horizontal" >

             	<TextView
                	android:id="@+id/textView2"
               	 	android:layout_width="wrap_content"
               	 	android:layout_height="wrap_content"
                	android:text="@string/add_tv_major" />

				<EditText
				    android:id="@+id/editText2"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:ems="10" />

         	</LinearLayout>

         	<LinearLayout
         	    android:layout_width="284dp"
         	    android:layout_height="wrap_content"
         	    android:orientation="horizontal" >

         		<TextView
         		    android:id="@+id/textView3"
         		    android:layout_width="wrap_content"
         		    android:layout_height="32dp"
         		    android:text="@string/add_tv_sex" />

            	<EditText
            	    android:id="@+id/editText3"
            	    android:layout_width="match_parent"
            	    android:layout_height="wrap_content"
            	    android:ems="10" />

         	</LinearLayout>

         	<LinearLayout
         	    android:layout_width="284dp"
         	    android:layout_height="wrap_content"
         	    android:orientation="horizontal" >

             	<TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"               
                android:text="@string/add_tv_phone" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" >
                
            </EditText>
         	</LinearLayout>

         	<LinearLayout
         	    android:layout_width="283dp"
         	    android:layout_height="wrap_content"
         	    android:orientation="horizontal" >

             	<TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_tv_email" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10" />
         	</LinearLayout>

         	<LinearLayout
         	    android:layout_width="284dp"
         	    android:layout_height="wrap_content"
         	    android:orientation="horizontal" >

             	<TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_tv_qq" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:ems="10" />
         	</LinearLayout>

         <LinearLayout
             android:layout_width="284dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >

             	<TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               
                android:text="@string/add_tv_bank" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />
         </LinearLayout>

         <LinearLayout
             android:layout_width="284dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >

             	<TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/add_tv_id" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:ems="10" />
         </LinearLayout>

         <LinearLayout
             android:layout_width="283dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >

             	<TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               
                android:text="@string/add_tv_place" />

            <EditText
                android:id="@+id/editText9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

         </LinearLayout>

         <LinearLayout
             android:layout_width="284dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:orientation="horizontal" >

             <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/add_button_confirm"
                android:width="80dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
         		android:layout_marginLeft="30dp"
                android:text="@string/add_button_cancel"
                android:width="80dp" />
         </LinearLayout>
   
        </LinearLayout>
    </ScrollView>


</LinearLayout>